third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/no-close-3.stderr
TOML parse error at line 1, column 21
  |
1 | ["where will it end]
  |                     ^
invalid basic string
